test d'une autre manière de dployer
